k8s/envs/local/deps/rabbitmq/rendered.yaml
# Source: rabbitmq/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: # kpt-merge: banzai-deps/rabbitmq
  name: rabbitmq
  namespace: banzai-deps
  labels:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/version: 4.1.2
    helm.sh/chart: rabbitmq-16.0.10
  annotations:
    internal.kpt.dev/upstream-identifier: 'apps|StatefulSet|banzai-deps|rabbitmq'
spec:
  serviceName: rabbitmq-headless
  podManagementPolicy: OrderedReady
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: rabbitmq
      app.kubernetes.io/name: rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: rabbitmq
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: rabbitmq
        app.kubernetes.io/version: 4.1.2
        helm.sh/chart: rabbitmq-16.0.10
      annotations:
        checksum/config: 0595c53d10fdc4fd8b9137b97b454316d493cc16c95ba7f69c3e195143748d5a
        checksum/secret: eb94f7fc40208f996fd885063c3e736c8ef0a55412b315be71a5fc38ef2065d3
    spec:
      serviceAccountName: rabbitmq
      affinity:
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: rabbitmq
                  app.kubernetes.io/name: rabbitmq
              topologyKey: kubernetes.io/hostname
            weight: 1
        nodeAffinity: null
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      terminationGracePeriodSeconds: 120
      enableServiceLinks: true
      containers:
      - name: rabbitmq
        image: docker.io/bitnami/rabbitmq:4.1.2-debian-12-r0
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1001
          runAsNonRoot: true
          runAsUser: 1001
          seLinuxOptions: {}
          seccompProfile:
            type: RuntimeDefault
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/bash
              - -ec
              - |
                if [[ -f /opt/bitnami/scripts/rabbitmq/nodeshutdown.sh ]]; then
                    /opt/bitnami/scripts/rabbitmq/nodeshutdown.sh -t "120" -d "false"
                else
                    rabbitmqctl stop_app
                fi
        envFrom: null
        ports:
        - name: amqp
          containerPort: 5672
        - name: dist
          containerPort: 25672
        - name: stats
          containerPort: 15672
        - name: epmd
          containerPort: 4369
        - name: metrics
          containerPort: 9419
        livenessProbe:
          failureThreshold: 6
          initialDelaySeconds: 120
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 20
          exec:
            command:
            - /bin/bash
            - -ec
            - curl -f --user rabbitmq:$(< $RABBITMQ_PASSWORD_FILE) 127.0.0.1:15672/api/health/checks/virtual-hosts
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 20
          exec:
            command:
            - /bin/bash
            - -ec
            - curl -f --user rabbitmq:$(< $RABBITMQ_PASSWORD_FILE) 127.0.0.1:15672/api/health/checks/local-alarms
        resources:
          limits:
            cpu: 375m
            ephemeral-storage: 2Gi
            memory: 384Mi
          requests:
            cpu: 250m
            ephemeral-storage: 50Mi
            memory: 256Mi
        volumeMounts:
        - name: configuration
          mountPath: /bitnami/rabbitmq/conf
        - name: empty-dir
          mountPath: /tmp
          subPath: tmp-dir
        - name: empty-dir
          mountPath: /opt/bitnami/rabbitmq/etc/rabbitmq
          subPath: app-conf-dir
        - name: empty-dir
          mountPath: /opt/bitnami/rabbitmq/var/lib/rabbitmq
          subPath: app-tmp-dir
        - name: empty-dir
          mountPath: /opt/bitnami/rabbitmq/.rabbitmq/
          subPath: app-erlang-cookie
        - name: empty-dir
          mountPath: /opt/bitnami/rabbitmq/var/log/rabbitmq
          subPath: app-logs-dir
        - name: empty-dir
          mountPath: /opt/bitnami/rabbitmq/plugins
          subPath: app-plugins-dir
        - name: data
          mountPath: /opt/bitnami/rabbitmq/.rabbitmq/mnesia
        - name: rabbitmq-secrets
          mountPath: /opt/bitnami/rabbitmq/secrets
      volumes:
      - name: empty-dir
        emptyDir: {}
      - name: configuration
        projected:
          sources:
          - secret:
              name: rabbitmq-config
      - name: rabbitmq-secrets
        projected:
          sources:
          - secret:
              name: rabbitmq
          - secret:
              name: rabbitmq
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
      labels:
        app.kubernetes.io/instance: rabbitmq
        app.kubernetes.io/name: rabbitmq
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 512Mi
---
# Source: rabbitmq/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata: # kpt-merge: banzai-deps/rabbitmq
  name: rabbitmq
  namespace: banzai-deps
  labels:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/version: 4.1.2
    helm.sh/chart: rabbitmq-16.0.10
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|NetworkPolicy|banzai-deps|rabbitmq'
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: rabbitmq
      app.kubernetes.io/name: rabbitmq
  policyTypes:
  - Ingress
  - Egress
  egress:
  - {}
  ingress:
  # Allow inbound connections to RabbitMQ
  - ports:
    - port: 4369
    - port: 5672
    - port: 5671
    - port: 25672
    - port: 15672
---
# Source: rabbitmq/templates/svc.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: banzai-deps/rabbitmq
  name: rabbitmq
  namespace: banzai-deps
  labels:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/version: 4.1.2
    helm.sh/chart: rabbitmq-16.0.10
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|banzai-deps|rabbitmq'
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: amqp
    port: 5672
    targetPort: amqp
    nodePort: null
  - name: epmd
    port: 4369
    targetPort: epmd
    nodePort: null
  - name: dist
    port: 25672
    targetPort: dist
    nodePort: null
  - name: http-stats
    port: 15672
    targetPort: stats
    nodePort: null
  selector:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/name: rabbitmq
---
# Source: rabbitmq/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata: # kpt-merge: banzai-deps/rabbitmq-headless
  name: rabbitmq-headless
  namespace: banzai-deps
  labels:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/version: 4.1.2
    helm.sh/chart: rabbitmq-16.0.10
  annotations:
    internal.kpt.dev/upstream-identifier: '|Service|banzai-deps|rabbitmq-headless'
spec:
  clusterIP: None
  ports:
  - name: epmd
    port: 4369
    targetPort: epmd
  - name: amqp
    port: 5672
    targetPort: amqp
  - name: dist
    port: 25672
    targetPort: dist
  - name: http-stats
    port: 15672
    targetPort: stats
  selector:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/name: rabbitmq
  publishNotReadyAddresses: true
